// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tree Basic check basic render 1`] = `
<div
  class="rc-tree"
>
  <div
    role="tree"
  >
    <input
      style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="rc-tree-treenode"
    style="position:absolute;pointer-events:none;visibility:hidden;height:0;overflow:hidden"
  >
    <div
      class="rc-tree-indent"
    >
      <div
        class="rc-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="rc-tree-list"
    style="position:relative"
  >
    <div
      class="rc-tree-list-holder"
    >
      <div>
        <div
          class="rc-tree-list-holder-inner"
          style="display:flex;flex-direction:column"
        >
          <div
            class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher_open"
            />
            <span
              class="rc-tree-checkbox"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
              title="---"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__open"
              />
              <span
                class="rc-tree-title"
              >
                ---
              </span>
            </span>
          </div>
          <div
            class="rc-tree-treenode rc-tree-treenode-disabled rc-tree-treenode-switcher-open"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            >
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-start rc-tree-indent-unit-end"
              />
            </span>
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-checkbox rc-tree-checkbox-disabled"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="---"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                ---
              </span>
            </span>
          </div>
          <div
            class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            >
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-start rc-tree-indent-unit-end"
              />
            </span>
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-checkbox"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="---"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                ---
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic check check after data ready works 1`] = `
<div
  class="rc-tree"
>
  <div
    role="tree"
  >
    <input
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="rc-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
  >
    <div
      class="rc-tree-indent"
    >
      <div
        class="rc-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="rc-tree-list"
    style="position: relative;"
  >
    <div
      class="rc-tree-list-holder"
    >
      <div>
        <div
          class="rc-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-checkbox-checked rc-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher_open"
            />
            <span
              class="rc-tree-checkbox rc-tree-checkbox-checked"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
              title="Light"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__open"
              />
              <span
                class="rc-tree-title"
              >
                Light
              </span>
            </span>
          </div>
          <div
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-checkbox-checked rc-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            >
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-start rc-tree-indent-unit-end"
              />
            </span>
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-checkbox rc-tree-checkbox-checked"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="Bamboo"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                Bamboo
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic check check update when Tree trigger componentWillReceiveProps 1`] = `
<div
  class="rc-tree"
>
  <div
    role="tree"
  >
    <input
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="rc-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
  >
    <div
      class="rc-tree-indent"
    >
      <div
        class="rc-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="rc-tree-list"
    style="position: relative;"
  >
    <div
      class="rc-tree-list-holder"
    >
      <div>
        <div
          class="rc-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-checkbox-checked rc-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-checkbox rc-tree-checkbox-checked"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="parent 1"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                parent 1
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic ignore illegal node as Tree children Direct TreeNode 1`] = `
<div
  class="rc-tree"
>
  <div
    role="tree"
  >
    <input
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="rc-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
  >
    <div
      class="rc-tree-indent"
    >
      <div
        class="rc-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="rc-tree-list"
    style="position: relative;"
  >
    <div
      class="rc-tree-list-holder"
    >
      <div>
        <div
          class="rc-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            class="rc-tree-treenode rc-tree-treenode-switcher-open"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="00"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                00
              </span>
            </span>
          </div>
          <div
            class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="02"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                02
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic ignore illegal node as Tree children Sub TreeNode 1`] = `
<div
  class="rc-tree"
>
  <div
    role="tree"
  >
    <input
      style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="rc-tree-treenode"
    style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
  >
    <div
      class="rc-tree-indent"
    >
      <div
        class="rc-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="rc-tree-list"
    style="position: relative;"
  >
    <div
      class="rc-tree-list-holder"
    >
      <div>
        <div
          class="rc-tree-list-holder-inner"
          style="display: flex; flex-direction: column;"
        >
          <div
            class="rc-tree-treenode rc-tree-treenode-switcher-open"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="00"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                00
              </span>
            </span>
          </div>
          <div
            class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher_open"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
              title="01"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__open"
              />
              <span
                class="rc-tree-title"
              >
                01
              </span>
            </span>
          </div>
          <div
            class="rc-tree-treenode rc-tree-treenode-switcher-open"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            >
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-end"
              />
            </span>
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="010"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                010
              </span>
            </span>
          </div>
          <div
            class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            >
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-end"
              />
            </span>
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="012"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                012
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic renders correctly 1`] = `
<div
  class="rc-tree forTest rc-tree-show-line"
>
  <div
    role="tree"
  >
    <input
      style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="rc-tree-treenode"
    style="position:absolute;pointer-events:none;visibility:hidden;height:0;overflow:hidden"
  >
    <div
      class="rc-tree-indent"
    >
      <div
        class="rc-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="rc-tree-list"
    style="position:relative"
  >
    <div
      class="rc-tree-list-holder"
    >
      <div>
        <div
          class="rc-tree-list-holder-inner"
          style="display:flex;flex-direction:column"
        >
          <div
            class="spe rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher_open"
            />
            <span
              class="rc-tree-checkbox"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
              title="parent 1"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__open"
              />
              <span
                class="rc-tree-title"
              >
                parent 1
              </span>
            </span>
          </div>
          <div
            class="rc-tree-treenode rc-tree-treenode-disabled rc-tree-treenode-switcher-open"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            >
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-start rc-tree-indent-unit-end"
              />
            </span>
            <span
              class="rc-tree-switcher rc-tree-switcher_open"
            />
            <span
              class="rc-tree-checkbox rc-tree-checkbox-disabled"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
              title="leaf 1"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__open"
              />
              <span
                class="rc-tree-title"
              >
                leaf 1
              </span>
            </span>
          </div>
          <div
            class="rc-tree-treenode rc-tree-treenode-switcher-open"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            >
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-start rc-tree-indent-unit-end"
              />
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-start"
              />
            </span>
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-checkbox"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                leaf
              </span>
            </span>
          </div>
          <div
            class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            >
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-start rc-tree-indent-unit-end"
              />
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-start"
              />
            </span>
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-checkbox"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="leaf"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                leaf
              </span>
            </span>
          </div>
          <div
            class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            >
              <span
                class="rc-tree-indent-unit rc-tree-indent-unit-start rc-tree-indent-unit-end"
              />
            </span>
            <span
              class="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              class="rc-tree-checkbox rc-tree-checkbox-disabled"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              title="leaf 2"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                class="rc-tree-title"
              >
                leaf 2
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tree Basic renders opaque children correctly 1`] = `
<div
  class="rc-tree"
>
  <div
    role="tree"
  >
    <input
      style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
      tabindex="0"
      value=""
    />
  </div>
  <div
    aria-hidden="true"
    class="rc-tree-treenode"
    style="position:absolute;pointer-events:none;visibility:hidden;height:0;overflow:hidden"
  >
    <div
      class="rc-tree-indent"
    >
      <div
        class="rc-tree-indent-unit"
      />
    </div>
  </div>
  <div
    class="rc-tree-list"
    style="position:relative"
  >
    <div
      class="rc-tree-list-holder"
    >
      <div>
        <div
          class="rc-tree-list-holder-inner"
          style="display:flex;flex-direction:column"
        >
          <div
            class="rc-tree-treenode rc-tree-treenode-switcher-close rc-tree-treenode-leaf-last"
          >
            <span
              aria-hidden="true"
              class="rc-tree-indent"
            />
            <span
              class="rc-tree-switcher rc-tree-switcher_close"
            />
            <span
              class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close"
              title="0"
            >
              <span
                class="rc-tree-iconEle rc-tree-icon__close"
              />
              <span
                class="rc-tree-title"
              >
                0
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
